chore: "collapse" nested ifs