@@ -102,10 +102,8 @@ public class UserOperationLogContextEntryBuilder {
 
   public UserOperationLogContextEntryBuilder inContextOf(TaskEntity task, List<PropertyChange> propertyChanges) {
 
-    if (propertyChanges == null || propertyChanges.isEmpty()) {
-      if (OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
-        propertyChanges = Arrays.asList(PropertyChange.EMPTY_CHANGE);
-      }
+    if ((propertyChanges == null || propertyChanges.isEmpty()) && OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
+      propertyChanges = List.of(PropertyChange.EMPTY_CHANGE);
     }
     entry.setPropertyChanges(propertyChanges);
 
@@ -140,10 +138,8 @@ public class UserOperationLogContextEntryBuilder {
 
   public UserOperationLogContextEntryBuilder inContextOf(HistoricTaskInstance task, List<PropertyChange> propertyChanges) {
 
-    if (propertyChanges == null || propertyChanges.isEmpty()) {
-      if (OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
-        propertyChanges = Arrays.asList(PropertyChange.EMPTY_CHANGE);
-      }
+    if ((propertyChanges == null || propertyChanges.isEmpty()) && OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
+      propertyChanges = List.of(PropertyChange.EMPTY_CHANGE);
     }
     entry.setPropertyChanges(propertyChanges);
 
@@ -163,10 +159,8 @@ public class UserOperationLogContextEntryBuilder {
 
   public UserOperationLogContextEntryBuilder inContextOf(ExecutionEntity processInstance, List<PropertyChange> propertyChanges) {
 
-    if (propertyChanges == null || propertyChanges.isEmpty()) {
-      if (OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
-        propertyChanges = Arrays.asList(PropertyChange.EMPTY_CHANGE);
-      }
+    if ((propertyChanges == null || propertyChanges.isEmpty()) && OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
+      propertyChanges = List.of(PropertyChange.EMPTY_CHANGE);
     }
     entry.setPropertyChanges(propertyChanges);
     entry.setRootProcessInstanceId(processInstance.getRootProcessInstanceId());
@@ -187,10 +181,8 @@ public class UserOperationLogContextEntryBuilder {
 
   public UserOperationLogContextEntryBuilder inContextOf(HistoryEvent historyEvent, ResourceDefinitionEntity<?> definition, List<PropertyChange> propertyChanges) {
 
-    if (propertyChanges == null || propertyChanges.isEmpty()) {
-      if (OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
-        propertyChanges = Arrays.asList(PropertyChange.EMPTY_CHANGE);
-      }
+    if ((propertyChanges == null || propertyChanges.isEmpty()) && OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
+      propertyChanges = List.of(PropertyChange.EMPTY_CHANGE);
     }
     entry.setPropertyChanges(propertyChanges);
     entry.setRootProcessInstanceId(historyEvent.getRootProcessInstanceId());
@@ -214,10 +206,8 @@ public class UserOperationLogContextEntryBuilder {
 
   public UserOperationLogContextEntryBuilder inContextOf(HistoricVariableInstanceEntity variable, ResourceDefinitionEntity<?> definition, List<PropertyChange> propertyChanges) {
 
-    if (propertyChanges == null || propertyChanges.isEmpty()) {
-      if (OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
-        propertyChanges = Arrays.asList(PropertyChange.EMPTY_CHANGE);
-      }
+    if ((propertyChanges == null || propertyChanges.isEmpty()) && OPERATION_TYPE_CREATE.equals(entry.getOperationType())) {
+      propertyChanges = List.of(PropertyChange.EMPTY_CHANGE);
     }
     entry.setPropertyChanges(propertyChanges);
     entry.setRootProcessInstanceId(variable.getRootProcessInstanceId());
